tests/postgres/ui-common/section_wrong_name_in_map.stderr
error: sql_forge!: section `#wrong` is declared in the section map but `{#wrong}` never appears in the SQL
 --> tests/postgres/tmp-ui/section_wrong_name_in_map.rs:8:9
  |
8 |         "SELECT id, name FROM users {#filter}",
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
